--- a/Modelo/desafio01/modelo.html
+++ b/Modelo/desafio01/modelo.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeiro exercicio de JS</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-<h1>Titulo</h1>
+        <h1>Hora do dia</h1>
     </header>
-
     <section>
-<div>
-    testando...
-</div>
-<div>
-    olá!
-</div>
+        <div id="msg">
+            Aqui vai aparecer a mensagem...
+        </div>
+        <div id="foto">
+            <img id='imagem'src="imagens/manhã pronta.png" alt="foto de manhã">
+        </div>
     </section>
-
     <footer>
-<p>&copy; Cursoemvideo</p>
+        <p>&copy; Cursoemvideo</p>
     </footer>
     <script src="script.js"></script>
 </body>
