--- a/Modelo/desafio03/modelo.html
+++ b/Modelo/desafio03/modelo.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mudança de hora</title>
+    <title>primeiro exercicio de JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+<h1>Vamos contar</h1>
     </header>
+
     <section>
-        <div id="msg">
-            Aqui vai aparecer a mensagem...
-        </div>
-        <div id="foto">
-            <img id="imagem" src="manhãpronta.png" alt="foto de manhã">
-        </div>
+<div id="dados">
+    <p>início: </p>
+    <p>fim: </p>
+    <p>passo: </p>
+</div>
+<div id="res">
+    Preparando a contagem...
+</div>
     </section>
+
     <footer>
-<p>&copy; Curso em video</p>
+<p>&copy; Cursoemvideo</p>
     </footer>
     <script src="script.js"></script>
 </body>
