--- a/Modelo/desafio01/index.html
+++ b/Modelo/desafio01/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>mudança de hora</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Hora do Dia</h1>
     </header>
     <section>
         <div id="msg">
             Aqui vai aparecer a mensagem...
         </div>
-        <div id="foto">
-            <img id='imagem'src="imagens/manhã pronta.png" alt="foto de manhã">
+        <div id="res">
+
         </div>
     </section>
     <footer>
-        <p>&copy; Cursoemvideo</p>
+<p>&copy; Curso em video</p>
     </footer>
     <script src="script.js"></script>
 </body>
