--- a/Modelo/desafio03/modelo.html
+++ b/Modelo/desafio03/modelo.html
@@ -14,9 +14,10 @@
 
     <section>
 <div id="dados">
-    <p>início: </p>
-    <p>fim: </p>
-    <p>passo: </p>
+    <p>início: <input type="number" name="início" id="txti"></p>
+    <p>fim: <input type="number" name="fim" id="txtf"></p>
+    <p>passo: <input type="number" name="passo" id="txtp"></p>
+    <p><input type="button" value="contar" onclick="contar()"></p>
 </div>
 <div id="res">
     Preparando a contagem...
